#ifndef LOGIN_H
#define LOGIN_H

#include <QMainWindow>

QT_BEGIN_NAMESPACE
namespace Ui {
class Login;
}
QT_END_NAMESPACE

class Login : public QMainWindow
{
    Q_OBJECT

public:
    Login(QWidget *parent = nullptr);
    ~Login();

private slots:
    void on_registerButton_clicked();

    void on_loginButton_clicked();

private:
    Ui::Login *ui;
    bool authenticated;
};
#endif // LOGIN_H
